Fri Jul 31 13:15:27 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* transcode.c (str_encode_bang): C99ism.

Fri Jul 31 11:48:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): used more appropriate construct.

Fri Jul 31 10:54:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (literal_concat_gen): reduced unnecessary node at string
	  literal concatenation with empty head dstr.  [ruby-dev:38968]

Fri Jul 31 02:57:39 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (literal_concat_gen): NODE_DSTR was incorrectly handled as
	  NODE_STR.  [ruby-dev:38968]

	* bootstraptest/test_syntax.rb: add a test for above.

Fri Jul 31 00:55:48 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_module.rb (test_ancestors, test_included_modules):
	  ignore rake mixins.

Fri Jul 31 00:30:54 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_insnhelper.c (vm_call_cfunc): let set_trace_func use called_id
	  instead of original_id.

Thu Jul 30 23:04:32 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* gem_prelude.rb (Gem.path): uses Gem.default_path as a default value
	  so that ruby finds gems in ~/.gem/.
	  (Gem.user_home): reduced version of lib/rubygems.rb's.
	  Gem.default_path needs it.

Thu Jul 30 22:28:04 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* tool/compile_prelude.rb: replaces "require" with in-place evaluation
	  so that copy & paste for lib/rubygems/default.rb is not necessary.

	* gem_prelude.rb: removes copied codes from lib/rubygems/defaults.rb.
	  uses require instead.

	* common.mk (prelude.c): adds dependency for lib/rubygems/defaults.rb.

Thu Jul 30 21:56:18 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_rand.rb: add tests for Random class.

Thu Jul 30 21:48:56 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* random.c (init_genrand): ensure invariant of mt->next and mt->left.
	  mt->next should always equal mt->state + N + 1 - mt->left.
	  In fact, 'r = Random.new(0); r == r.dup' has returned false.
