@@ -1,3 +1,8 @@
+Fri Jul 31 15:06:33 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* tool/compile_prelude.rb: too long string literal causes compile error
+	  on some platforms.
+
 Fri Jul 31 13:15:27 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* transcode.c (str_encode_bang): C99ism.
